@@ -1,5 +1,11 @@
 2003-10-23  ABE Yuji <cbo46560@pop12.odn.ne.jp>
 
+	* [w3m-dev 04011] accessing to an `https' URI with a fragment via a proxy
+	* url.c (HTTPrequestURI): drop fragment
+		(openURL): don't clear pu->label
+
+2003-10-23  ABE Yuji <cbo46560@pop12.odn.ne.jp>
+
 	* [w3m-dev 04010] support for deprecated __ss_family
 	* acinclude.m4 (AC_W3M_IPv6): check __ss_family
 	* config.h.in: add HAVE_OLD_SS_FAMILY
